--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Source/eServiceOnlineAPI/eServiceOnline.WebAPI.csproj.user
 *.user
 Source/eServiceOnline/Views/ProductHaul/_TransferBlendFromBulkPlant.cshtml
 /Source/eServiceOnline/Logs/2023/11/29
+/Source/Deploy/
